# RGB.NET-PicoPi

./: .gitignore  README.md  usb_descriptors.c
Firmware/: CMakeLists.txt  RGB.NET.c  tusb_config.h  usb_descriptors.c  ws2812.pio
PicoPiConfig/: ActionCommand.cs  App.xaml  App.xaml.cs  Channel.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  PicoPiConfig.csproj  PicoPiConfig.sln  PicoPiSDK.cs
